manifests/couchbase-operator-2.64.0.tgz-manifest.yaml
---
# Source: couchbase-operator/templates/admission-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-couchbase-admission-controller
  labels:
    app.kubernetes.io/name: couchbase-admission-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: couchbase-operator-2.64.0
spec:
  selector:
    app.kubernetes.io/name : couchbase-admission-controller
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
---
# Source: couchbase-operator/templates/operator-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-couchbase-operator
  labels:
    app.kubernetes.io/name: couchbase-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: couchbase-operator-2.64.0
spec:
  ports:
  - name: http-pprof
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-prometheus
    port: 8383
    protocol: TCP
    targetPort: 8383
  selector:
    app.kubernetes.io/name: couchbase-operator
---
# Source: couchbase-operator/templates/admission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-couchbase-admission-controller
  labels:
    app.kubernetes.io/name: couchbase-admission-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: couchbase-operator-2.64.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: couchbase-admission-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: couchbase-admission-controller
      annotations:
        checksum/config: fd79a70bd3f73b9e88df181ad877897632f48af3e1ab7290b80e176d59390eb3
    spec:
      imagePullSecrets:
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: my-release-couchbase-admission-controller
      securityContext:
        runAsNonRoot: true
      serviceAccountName:  my-release-couchbase-admission-controller
      containers:
      - name: couchbase-operator
        image: "couchbase/admission-controller:2.6.4"
        imagePullPolicy: IfNotPresent
        command:
        - couchbase-admission-controller
        args:
          - "--zap-log-level"
          -  "info" 
          - "--tls-cert-file"
          - "/var/run/secrets/couchbase.com/couchbase-operator-admission/tls-cert-file"
          - "--tls-private-key-file"
          - "/var/run/secrets/couchbase.com/couchbase-operator-admission/tls-private-key-file"
          - "--default-file-system-group=true"
          - "--validate-secrets=true"
          - "--validate-storage-classes=true"
        ports:
        - name: https
          containerPort: 443
        resources:
            {}
        volumeMounts:
        - name: couchbase-operator-admission
          mountPath: "/var/run/secrets/couchbase.com/couchbase-operator-admission"
          readOnly: true
---
# Source: couchbase-operator/templates/operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-couchbase-operator
  labels:
    app.kubernetes.io/name: couchbase-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: couchbase-operator-2.64.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: couchbase-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: couchbase-operator
    spec:
      serviceAccountName: my-release-couchbase-operator
      imagePullSecrets:
      containers:
      - name: couchbase-operator
        image: "couchbase/operator:2.6.4"
        imagePullPolicy: IfNotPresent
        command:
        - couchbase-operator
        args:
        - "--pod-create-timeout=10m"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8383
          name: prometheus
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
            scheme: HTTP
        resources:
            {}
---
# Source: couchbase-operator/templates/couchbase-bucket.yaml
apiVersion: v1
kind: List
metadata:
  name: my-release-buckets
items:
- apiVersion: couchbase.com/v2
  kind: CouchbaseBucket
  metadata:
    name: default
    labels:
      cluster: my-release
  spec:
    compressionMode: passive
    conflictResolution: seqno
    enableFlush: false
    enableIndexReplica: false
    evictionPolicy: valueOnly
    ioPriority: low
    memoryQuota: 100Mi
    replicas: 1
    scopes:
      managed: false
      resources: []
    storageBackend: couchstore
---
# Source: couchbase-operator/templates/admission-deployment.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-release-couchbase-admission-controller
webhooks:
- name: my-release-couchbase-admission-controller.default.svc
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
    - couchbasebuckets
    - couchbaseephemeralbuckets
    - couchbasememcachedbuckets
    - couchbasereplications
    - couchbaseusers
    - couchbasegroups
    - couchbaserolebindings
    - couchbasebackups
    - couchbasebackuprestores
    - couchbaseautoscalers
    - couchbasecollections
    - couchbasecollectiongroups
    - couchbasescopes
    - couchbasescopegroups
    - couchbasemigrationreplications
  sideEffects: None
  failurePolicy: Fail
  clientConfig:
    service:
      namespace: default
      name: my-release-couchbase-admission-controller
      path: "/couchbaseclusters/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMekNDQWhlZ0F3SUJBZ0lRRjVGclU4VGZjdmpqV3ZtL0l5c25vakFOQmdrcWhraUc5dzBCQVFzRkFEQWkKTVNBd0hnWURWUVFERXhkaFpHMXBjM05wYjI0dFkyOXVkSEp2Ykd4bGNpMWpZVEFlRncweU5EQTJNVFV5TXpVegpNRFZhRncwek5EQTJNVE15TXpVek1EVmFNQ0l4SURBZUJnTlZCQU1URjJGa2JXbHpjMmx2YmkxamIyNTBjbTlzCmJHVnlMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwdGsvam0rOS9lbFMKU0toZHdROW9XeGdLZld2SkdOMU1NVjl4RXZVaXlpRzF6azUxcXpPSjB2YzFEWmtRQTR3N1BQb0RhekV4Kyt5cwozQ2w4ZVJzTzRIN2 [...]
